# Flappy-Bird

./: CMakeLists.txt  Readme.md  flappyBird.sln
flappyBird/: Bird.cpp  Bird.h  Constants.h  FlappyBird.cpp  FlappyBird.h  GameConstants.h  GameObject.cpp  GameObject.h  PhisicalObject.cpp  PhisicalObject.h  SGameEngine.cpp  SGameEngine.h  flappyBird.vcxproj  flappyBird.vcxproj.filters  main.cpp
src/: CMakeLists.txt
src/cpp/: Bird.cpp  FlappyBird.cpp  SGameEngine.cpp
src/hdr/: FlappyBird.h  GameConstants.h  GameObject.h  PhisicalObject.h
